[gd_scene load_steps=9 format=2]

[ext_resource path="res://modular/HeaderHaul.tscn" type="PackedScene" id=1]
[ext_resource path="res://testing/HaulRoute.tscn" type="PackedScene" id=2]
[ext_resource path="res://testing/ColumnHaul.tscn" type="PackedScene" id=3]
[ext_resource path="res://testing/TabsHaulRoute.tscn" type="PackedScene" id=4]
[ext_resource path="res://themes/windows_10_light/assets/icons/line_edit_clear.png" type="Texture" id=5]
[ext_resource path="res://testing/DispatchWindow.tscn" type="PackedScene" id=6]
[ext_resource path="res://exercises/HaulRouteDispatcher.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.741176, 0.74902, 0.745098, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="Background" type="Panel" parent="."]
anchor_right = 0.997
anchor_bottom = 0.988
margin_right = 0.0719604
margin_bottom = 0.199951
custom_styles/panel = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="Background"]
anchor_left = 0.775
anchor_top = 0.121
anchor_right = 0.814
anchor_bottom = 0.189
margin_left = -0.275024
margin_top = 0.246994
margin_right = -0.0939941
margin_bottom = -0.0770035
texture = ExtResource( 5 )
expand = true

[node name="TabsHaul" parent="." instance=ExtResource( 4 )]
anchor_left = -0.001
anchor_top = 0.123
anchor_right = 0.812
margin_left = 0.024
margin_top = 0.199997
margin_right = 0.511963

[node name="Background2" type="Panel" parent="."]
anchor_left = 0.01
anchor_top = 0.2
anchor_right = 0.997
anchor_bottom = 0.988
margin_left = -10.24
margin_right = -185.928
margin_bottom = 0.199951
custom_styles/panel = SubResource( 1 )

[node name="Column" parent="." instance=ExtResource( 3 )]
anchor_left = 0.817
anchor_top = 0.153
anchor_bottom = 0.988
margin_left = -836.608
margin_top = -91.8
margin_right = 17.0
margin_bottom = 0.199951

[node name="DiagramaControl" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true
anchor_left = 0.026
anchor_top = 0.213
anchor_right = 0.814
anchor_bottom = 0.97
margin_left = -9.624
margin_top = 0.199989
margin_right = 0.463989
margin_bottom = 15.0

[node name="Header" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true
anchor_left = -0.012
anchor_bottom = 0.122
margin_left = 12.288
margin_bottom = -0.200005

[node name="DispatchWindowBack" type="TextureButton" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DispatchWindow" parent="." instance=ExtResource( 6 )]
unique_name_in_owner = true
anchor_left = 0.829
anchor_top = 0.511
anchor_right = 0.829
anchor_bottom = 0.511
margin_left = -569.896
margin_top = -301.6
margin_right = -75.896
margin_bottom = 288.4
rect_min_size = Vector2( 0, 0 )

[connection signal="button_down" from="DispatchWindowBack" to="." method="_on_DispatchWindowBack_button_down"]
